# GamersAgainstWeedWebsite-serverside

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Server.h  main.cpp  vcpkg.json
.github/workflows/: c-cpp.yml
src/: Server.h  main.cpp
src/Server/: Common.cxx  Common.hpp  Server.cxx  Server.hpp  SockCom.cxx  SockCom.hpp
